--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
     <EditText
+        android:id="@+id/mobileNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Enter mobile number"
-        android:paddingStart="16dp"
-        android:id="@+id/mobileNumber"
-        android:paddingEnd="16dp"
-        android:maxEms="10"
-        android:maxLength="10"
         android:layout_marginTop="100dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="phone"
+        android:hint="@string/create_your_key"
+        android:inputType="number"
+        android:maxEms="10"
+        android:gravity="center"
+        android:maxLength="10"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/saveBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:id="@+id/saveBtn"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/mobileNumber"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/save"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/mobileNumber" />
 </androidx.constraintlayout.widget.ConstraintLayout>
